WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194605
Encrypted PDFs inside <embed> or <object> crash the Web Content process
https://bugs.webkit.org/show_bug.cgi?id=194605
Summary
Encrypted PDFs inside <embed> or <object> crash the Web Content process
Tim Horton
Reported
2019-02-13 12:11:31 PST
Encrypted PDFs inside <embed> or <object> crash the Web Content process
Attachments
Patch
(9.76 KB, patch)
2019-02-13 12:11 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews122 for ios-simulator-wk2
(2.62 MB, application/zip)
2019-02-13 13:55 PST
,
EWS Watchlist
no flags
Details
Patch
(10.21 KB, patch)
2019-02-13 14:26 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-02-13 12:11:56 PST
Created
attachment 361930
[details]
Patch
Tim Horton
Comment 2
2019-02-13 12:12:35 PST
<
rdar://problem/19894818
>
EWS Watchlist
Comment 3
2019-02-13 13:55:05 PST
Comment hidden (obsolete)
Comment on
attachment 361930
[details]
Patch
Attachment 361930
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/11137302
New failing tests: fast/replaced/encrypted-pdf-as-object-and-embed.html
EWS Watchlist
Comment 4
2019-02-13 13:55:06 PST
Comment hidden (obsolete)
Created
attachment 361936
[details]
Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Tim Horton
Comment 5
2019-02-13 14:13:13 PST
What a bizarre and unfortunate test result difference
Tim Horton
Comment 6
2019-02-13 14:26:42 PST
Created
attachment 361938
[details]
Patch
WebKit Commit Bot
Comment 7
2019-02-13 15:08:33 PST
Comment on
attachment 361938
[details]
Patch Clearing flags on attachment: 361938 Committed
r241481
: <
https://trac.webkit.org/changeset/241481
>
WebKit Commit Bot
Comment 8
2019-02-13 15:08:34 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug